--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <rest-assured.version>5.5.0</rest-assured.version>
         <lombok.vesion>1.18.36</lombok.vesion>
         <allure.vesion>2.29.1</allure.vesion>
+        <jackson.version>2.17.2</jackson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -39,6 +40,21 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>${allure.vesion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
 
