--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <lombok.vesion>1.18.36</lombok.vesion>
         <allure.vesion>2.29.1</allure.vesion>
         <jackson.version>2.17.2</jackson.version>
+        <wiremock.version>3.9.1</wiremock.version>
     </properties>
     <dependencies>
         <dependency>
@@ -55,6 +56,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>${wiremock.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
