--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <allure.vesion>2.29.1</allure.vesion>
         <jackson.version>2.17.2</jackson.version>
         <wiremock.version>3.9.1</wiremock.version>
+        <selenide.version>7.7.3</selenide.version>
     </properties>
     <dependencies>
         <dependency>
@@ -62,6 +63,11 @@
             <artifactId>wiremock</artifactId>
             <version>${wiremock.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
         </dependency>
     </dependencies>
 
