--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
 host=192.168.1.15:8111
-superUserToken=8968678760006517603
+superUserToken=6441561765438662104
+browser=chrome
+remote=http://localhost:4444/wd/hub
+browserSize=1920x1080
