Action Teamcity setups added

--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -38,7 +38,8 @@ jobs:
         continue-on-error: true
         # Указываем группу, чтобы не запустить тесты, связанные с сетапом TeamCity
         run: ./mvnw test -Dtest='com.example.teamcity.${{ inputs.package }}.**' -Dgroups=Regression
-
+      - name: Make swagger-coverage-commandline executable
+        run: chmod +x .swagger-coverage-commandline/bin/swagger-coverage-commandline
           # Создаем репорт с покрытием API тестов, основанном на Swagger.
           # Документация: https://github.com/viclovsky/swagger-coverage
           # Обязательно добавить фильтр SwaggerCoverageRestAssured в RestAssured
